--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -30,6 +30,9 @@
                 android:value="" />
         </activity>
         <activity
+            android:name=".Activity.AdressSearchActivity"
+            android:exported="false"/>
+        <activity
             android:name=".Activity.PlasmaPopupActivity"
             android:exported="false"
             android:theme="@style/Theme.AppCompat.Light.Dialog"
@@ -62,6 +65,13 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
+        <service android:name=".fcm.MyFirebaseMessagingService"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+            </intent-filter>
+        </service>
     </application>
 
 </manifest>
